update box-sizing mixins with clipping fix

--- a/mixins.scss
+++ b/mixins.scss
@@ -98,6 +98,11 @@
  */
 @mixin box-sizing($type:border-box) {
   @include prefix(box-sizing, $type); 
+
+  // keeps background from busting out of border 
+  -webkit-background-clip: padding-box;
+     -moz-background-clip: padding;
+          background-clip: padding-box;
 }
 
 /**
